# serializer version: 1
# name: TestFind.test[None]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': '2-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': '1-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'reads',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 3,
        'name': 'test.fq.gz',
        'name_on_disk': '3-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'subtraction',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
    ]),
  })
# ---
# name: TestFind.test[reads]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': '1-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'reads',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
    ]),
  })
# ---
# name: TestFind.test[reference]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': '2-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
    ]),
  })
# ---
# name: TestFind.test_pagination[1-2]
  dict({
    'found_count': 3,
    'items': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 3,
        'name': 'test.fq.gz',
        'name_on_disk': '3-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
    ]),
    'page': 2,
    'page_count': 3,
    'per_page': 1,
    'total_count': 3,
  })
# ---
# name: TestFind.test_pagination[1-None]
  dict({
    'found_count': 3,
    'items': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': '1-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'reads',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
    ]),
    'page': 1,
    'page_count': 3,
    'per_page': 1,
    'total_count': 3,
  })
# ---
# name: TestFind.test_pagination[2-None]
  dict({
    'found_count': 3,
    'items': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': '1-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'reads',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 3,
        'name': 'test.fq.gz',
        'name_on_disk': '3-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
    ]),
    'page': 1,
    'page_count': 2,
    'per_page': 2,
    'total_count': 3,
  })
# ---
# name: TestFind.test_pagination[3-1]
  dict({
    'found_count': 3,
    'items': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 4,
        'name': 'test.fq.gz',
        'name_on_disk': '4-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'subtraction',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': '1-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'reads',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 3,
        'name': 'test.fq.gz',
        'name_on_disk': '3-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 3,
    'total_count': 3,
  })
# ---
# name: TestFind.test_pagination[None-2]
  dict({
    'found_count': 3,
    'items': list([
    ]),
    'page': 2,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: TestFind.test_pagination[None-None]
  dict({
    'found_count': 3,
    'items': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 4,
        'name': 'test.fq.gz',
        'name_on_disk': '4-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'subtraction',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': '1-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'reads',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 3,
        'name': 'test.fq.gz',
        'name_on_disk': '3-test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 16700094,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        }),
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: TestUpload.test
  dict({
    'created_at': str,
    'id': 1,
    'name': 'single.fq.gz',
    'name_on_disk': '1-single.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 16700094,
    'type': 'reads',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': dict({
      'administrator': False,
      'handle': 'bob',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestUpload.test_bad_upload_type
  list([
    dict({
      'ctx': dict({
        'enum_values': list([
          'hmm',
          'reference',
          'reads',
          'subtraction',
        ]),
      }),
      'in': 'query string',
      'loc': list([
        'type',
      ]),
      'msg': "value is not a valid enumeration member; permitted: 'hmm', 'reference', 'reads', 'subtraction'",
      'type': 'type_error.enum',
    }),
  ])
# ---
# name: TestUpload.test_no_upload_type
  list([
    dict({
      'in': 'query string',
      'loc': list([
        'type',
      ]),
      'msg': 'field required',
      'type': 'value_error.missing',
    }),
  ])
# ---
